--- a/less/media-dark.less
+++ b/less/media-dark.less
@@ -3,7 +3,8 @@
 
 @media (prefers-color-scheme: dark) {
 	html,
-	#homepage .filter {
+	#homepage .filter,
+	.leaflet-container {
 		background: @dark-bg;
 		color: white;
 
